--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 .firstContainer {
     width: 100%;
     display: flex;
+    height: 510px;
 }
 
 .containerLeft {
@@ -42,20 +43,29 @@ body {
     height: 510px;
 }
 
+.topLeftDiv {
+    height: 300px;
+}
+
 .topLeftDiv img {
     width: 730px;
-    height: 100%;
+    height: 300px;
 }
 
 .middleLeftDiv {
     display: flex;
     flex-direction: row;
+    height: 211px;
 }
 
 .middleLeftDiv h2 {
-    font-size: 50px;
+    font-size: 55px;
     text-align: left;
     width: 288px;
+    font-weight: 800;
+    line-height: 1;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .contentMiddleLeftDiv {
@@ -63,13 +73,123 @@ body {
     flex-direction: column;
     width: 350px;
     margin-left: auto;
-    height: 100%;
+    height: 211px;
 }
 
 .contentMiddleLeftDiv p {
+    margin-top: auto;
+    margin-bottom: auto;
+    font-size: 15px;
+    color: hsl(236, 13%, 42%);
+    line-height: 1.7;
 }
 
 .contentMiddleLeftDiv button {
     width: 185px;
     height: 48px;
+    margin-top: auto;
+    color: #ffffff;
+    background-color: hsl(240, 100%, 5%);
+    border: none;
+    text-transform: uppercase;
+    letter-spacing: 0.4em;
+    cursor: pointer;
+}
+
+.containerRight {
+    background-color: hsl(240, 100%, 5%);
+    color: #ffffff;
+    padding: 0 24px;
+    margin-left: auto;
+    width: 350px;
+    height: 510px;
+}
+
+.containerRight h3 {
+    margin-top: 38px;
+    color: hsl(35, 77%, 62%);
+    font-size: 30px;
+}
+
+.middleRightArticle {
+    height: 146px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#middleRightArticleCenter {
+    border: solid 1px hsl(233, 8%, 79%);
+    border-left: none;
+    border-right: none;
+}
+
+.middleRightArticle h5 {
+    font-size: 16px;
+    font-weight: 800;
+    cursor: pointer;
+    margin-bottom: 17px;
+}
+
+.middleRightArticle:hover {
+    color: hsl(35, 77%, 62%);
+    transition: .5s;
+}
+
+.middleRightArticle p {
+    line-height: 1.8;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 12px;
+    color: hsl(233, 8%, 79%);
+}
+
+.bottomDiv {
+    display: flex;
+    flex-direction: row;
+    margin-top: 72px;
+    justify-content: space-between;
+}
+
+.bottomArticle {
+    display: flex;
+    flex-direction: row;
+    width: 380px;
+}
+
+.bottomArticle img {
+    width: 100px;
+    height: 127px;
+}
+
+.contentBottomDiv {
+    width: 255px;
+    margin-left: auto;
+}
+
+.contentBottomDiv h3 {
+    font-size: 30px;
+    color: hsl(233, 8%, 79%);
+    cursor: pointer;
+}
+
+.contentBottomDiv h5 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 18px;
+    color: hsl(240, 100%, 5%);
+    cursor: pointer;
+}
+
+.contentBottomDiv p {
+    font-size: 14px;
+    color: hsl(236, 13%, 42%);
+    line-height: 1.8;
+    cursor: pointer;
+}
+
+.contentBottomDiv:hover  h5{
+    color: hsl(5, 85%, 63%);
+    transition: .5s;
 }
